styles/style.scss
@use "sass:math";
@import "utils.scss";

$meter-width: 32rem;
$meter-height: 64rem;
$meter-padding: 10rem;
$meter-outer-radius: 30rem;
$max-height-multiplier: 2;

$screen-size-ss: 256px;
$screen-size-xs: 320px;
$screen-size-sm: 480px;
$screen-size-md: 768px;
$screen-size-lg: 992px;
$screen-size-xl: 1200px;

$row-gap: 1rem;

$PI: 3.14159265358929;
$ALPHA_0: $PI * 0.8;

:root {
    --background-color-primary: rgba(51, 51, 51, 1);
    --background-color-primary-dark: rgb(37, 37, 37);
    --background-color-secondary: rgb(66, 66, 66, 1);
    --font-color-primary: #fff;

    --color-primary: #fff;
    --color-secondary: #34c83c;
    --color-secondary-dark: #2ead34;
    --font-family-primary: "Helvetica", sans-serif;

    --dl-color-1: #8630e6;
    --dl-color-2: #f71e6a;

    --ul-color-1: #ff8000;
    --ul-color-2: #ff0000;

    --meter-background-color: rgb(0, 0, 0, 0.25);

    --progress-bar-gradient: linear-gradient(
        to right,
        var(--dl-color-1),
        var(--ul-color-1)
    );

    --meter-width: #{$meter-width};
    --meter-height: #{$meter-height};
    --meter-padding: #{$meter-padding};
    --meter-outer-radius: #{$meter-outer-radius};

    --ncsu-font: "UniversCondensed";
    --ncsu-red: #c00;
    --ncsu-red-dark: rgb(173, 0, 0);
    --border-radius-primary: 0.75rem;
}

html {
    height: 100%;
    width: 100%;
}

body {
    display: flex;
    margin: 0;
    padding: 0;
    height: 100%;
    width: 100%;
    align-items: center;
    background: var(--background-color-primary);
    color: var(--font-color-primary);
    font-family: var(--font-family-primary);
    justify-content: center;
    overflow-x: hidden;
}

main {
    display: grid;
    height: 100%;
    width: 100%;
    box-sizing: border-box;

    grid-template-areas:
        "test"
        "info"
        "button";

    grid-template-rows: repeat(1fr, 3);
    max-height: $meter-height;

    max-width: $meter-width;

    row-gap: $row-gap;
    padding: $row-gap/2;

    .test-container {
        align-self: end;
        grid-area: test;
    }

    .test-info-progress-container {
        grid-area: info;
    }

    .start-btn-container {
        height: 3rem;
        width: 75%;
        align-self: flex-start;
        grid-area: button;
        justify-self: center;
    }
}

.pane-container {
    background: var(--background-color-secondary);
    border-radius: var(--border-radius-primary);
    grid-area: test;
}

.pane-info {
    --padding: 1rem;
    padding: var(--padding);
    height: 100%;
    width: 100%;
    box-sizing: border-box;

    h1,
    h2 {
        text-align: left;
    }

    h1 {
        font-size: 3rem;
    }

    h2 {
        font-size: 2rem;
    }

    hr {
        --main-color: white;
        height: 0.1em;
        width: calc(100% + var(--padding));
        background-color: var(--main-color);
        border: none;
        border-radius: 1rem;
        margin-right: calc(-1 * var(--padding));
    }
}

.modal {
    height: 100%;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    background-color: rgba(0, 0, 0, 0.705);
    transition: all ease-out 250ms;
    z-index: 999;

    .modal-content {
        opacity: 100%;
        height: 75%;
        width: 75%;
    }

    transform: translateY(-100%);

    &.visible {
        transform: translateY(0);
    }
}

.hidden {
    pointer-events: none;
    visibility: hidden;
}

.test-container {
    position: relative;

    .info {
        --border-radius: 1rem;
        $y: (1 - sin($ALPHA_0))/2 - 0.05;
        display: flex;
        position: absolute;
        margin: 0 auto;
        height: calc(100% *#{$y});
        width: 75%;
        bottom: 0;
        right: 0;
        left: 0;
        align-items: center;

        background-color: var(--background-color-primary-dark);
        border-top-left-radius: var(--border-radius);
        border-top-right-radius: var(--border-radius);

        justify-content: center;

        .unit-container {
            --font-size-lg: 3.5rem;
            margin: 0;
            flex-direction: row;
            align-items: baseline;

            margin-left: var(--font-size-sm);
        }
    }

    .square-box {
        z-index: 1;

        canvas {
            padding: 0.5rem;
            box-sizing: border-box;
        }
    }
}

.test-info-container {
    display: flex;
    flex-direction: row;

    .info {
        display: flex;
        padding: 0.25rem;

        flex: 1;
        flex-direction: column;

        .test-kind {
            padding: 0.25rem 0;
            font-size: 1rem;
            font-weight: bold;
        }

        .unit-container {
            padding: 0.5rem;
            background: var(--background-color-secondary);
            border-radius: var(--border-radius-primary);
            flex: 1;
            text-align: left;
        }
    }
}

.progress-bar-container {
    display: flex;
    position: relative;
    margin: 0.5rem 0;
    height: 1rem;
    width: 100%;
    box-sizing: border-box;
    flex-direction: row;

    .progress-bar {
        height: 1rem;
        width: 0;
        border-radius: 0;
    }
}

.unit-container {
    --font-size-lg: 2.5rem;
    --font-size-sm: calc(var(--font-size-lg) / 4);
    display: flex;

    position: relative;
    margin: 0;
    flex-direction: column;
    margin-bottom: var(--font-size-sm);
    text-align: center;

    transition: color cubic-bezier(0.09, 0.91, 0.5, 1.1) 1000ms;

    &.in-progress {
        color: rgba(255, 255, 255, 0.25);
    }

    .amount {
        font-size: var(--font-size-lg);
    }

    .unit {
        font-size: var(--font-size-sm);
    }
}

@media all and (orientation: landscape) and (max-height: $screen-size-lg) {
    main {
        column-gap: $row-gap;
        grid-template-areas:
            "test info"
            "test button";
        grid-template-columns: 1fr 1fr;
        grid-template-rows: 1fr 1fr;
        max-height: $meter-width;
        max-width: $meter-height;

        .test-container {
            align-self: center;
        }
    }

    .test-info-progress-container {
        .test-info-container {
            align-items: center;
            flex-direction: column;
            justify-content: center;

            .info {
                margin: 0.25em;
                width: 75%;
                align-items: center;
                flex-direction: row;
                background: var(--background-color-secondary);
                border-radius: var(--border-radius-primary);

                .test-kind {
                    flex: 1;
                    text-align: left;
                }
                .unit-container {
                    flex: 1;
                    text-align: center;
                }
            }
        }
    }
}

// @media all and (max-width: $screen-size-md) {
//     html,
//     body {
//         font-size: 0.95rem;
//     }
// }

// @media all and (max-width: $screen-size-sm) {
//     html,
//     body {
//         font-size: 0.9rem;
//     }
// }

// @media all and (max-width: $screen-size-xs) {
//     html {
//         font-size: 0.95rem;
//     }
// }

